--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Simple Data Entry</title>
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
     <header class="header">
-      <img src="/logo.png" alt="Logo" class="logo" />
+      <img src="logo.png" alt="Logo" class="logo" />
       <h1>Server Credentials</h1>
       <nav></nav>
     </header>
@@ -56,7 +56,7 @@
       <tbody></tbody>
     </table>
   </div>
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
 
